Prevent text wrapping in feature title

--- a/hsreplaynet/static/styles/home_new.scss
+++ b/hsreplaynet/static/styles/home_new.scss
@@ -202,6 +202,9 @@
 
 			> span {
 				flex: 1 1 0;
+				text-overflow: ellipsis;
+				overflow: hidden;
+				white-space: nowrap;
 			}
 
 			.feature-btn {
